Làm phần Header

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2,6 +2,19 @@
     box-sizing: border-box;
 }
 
+:root {
+    --primary-color: #000958;
+    --desc-color: #656689;
+    --btn-color: #FF5B2E;
+    --bg-color: #fefaf5;
+    --second-bg-color: #FFF6ED;
+}
+
+html,
+body {
+    scroll-behavior: smooth;
+}
+
 html {
     font-size: 62.5%;
 }
@@ -9,6 +22,7 @@ html {
 body {
     font-size: 1.6rem;
     font-family: 'Poppins', sans-serif;
+    background-color: var(--second-bg-color);
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -18,4 +32,101 @@ h1, h2, h3, h4, h5, h6 {
 input, textarea, select, button {
     font-size: inherit;
     font-family: inherit;
+}
+
+/* =============================== Common =============================== */
+.container {
+    width: 1170px;
+    max-width: calc(100% - 48px);
+    margin: 0 auto;
+}
+
+a {
+    text-decoration: none;
+}
+
+.btn {
+    --height: 56px;
+
+    display: inline-block;
+    min-width: 130px;
+    height: var(--height);
+    line-height: var(--height);
+    border: 1px solid rgb(0, 9, 88, 0.7);
+    border-radius: 99px;
+    font-family: Poppins;
+    font-size: 1.6rem;
+    font-weight: 500;
+    color: var(--btn-color);
+    background-color: transparent;
+}
+
+/* =============================== Header =============================== */
+.header {
+    padding: 26px 0;
+}
+
+.header__inner {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.navbar__list {
+    display: flex;
+}
+
+.navbar__item {
+    padding: 8px 18px;
+}
+
+.navbar__link {
+    font-size: 1.4rem;
+    font-weight: 500;
+    line-height: 1;
+    color: #5E6085;
+    transition: .3s;
+}
+
+.navbar__link:hover,
+.navbar__link--active {
+    color: var(--primary-color);
+    text-shadow: 1px 0 0 currentColor;
+}
+
+.header-action {
+    display: flex;
+    align-items: center;
+}
+
+.header-action__link {
+    font-size: 1.4rem;
+    font-weight: 500;
+    padding: 8px 18px;
+    color: #5E6085;
+    transition: .3s;
+}
+
+.header-action__link:hover {
+    text-shadow: 1px 0 0 var(--primary-color);   
+}
+
+.header-action__btn {
+    --height: 50px;
+
+    min-width: 118px;
+    font-size: 1.4rem;
+    font-weight: 600;
+    border-color: var(--primary-color);
+    border-radius: 25px;
+    padding: 0 30px;
+    white-space: nowrap;
+    color: var(--primary-color);
+    transition: .3s;
+}
+
+.header-action__btn:hover {
+    cursor: pointer;
+    color: #fff;
+    background-color: var(--primary-color);
 }
