--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -48,7 +48,9 @@ a {
 .btn {
     --height: 56px;
 
-    display: inline-block;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
     min-width: 130px;
     height: var(--height);
     line-height: var(--height);
@@ -60,6 +62,28 @@ a {
     color: var(--btn-color);
     background-color: transparent;
 }
+
+.btn:hover {
+    cursor: pointer;
+}
+
+.btn--primary {
+    color: #fff;
+    background-color: var(--btn-color);
+    border-color: var(--btn-color);
+}
+
+.btn__icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 20px;
+    height: 20px;
+    margin-left: 10px;
+    border-radius: 50%;
+    background-color: #FFF;
+}
+
 
 /* =============================== Header =============================== */
 .header {
@@ -140,6 +164,7 @@ a {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    column-gap: 120px;
 }
 
 .hero__media {
@@ -204,7 +229,6 @@ a {
 
 .hero-list-item {
     display: flex;
-    /* align-items: flex-start; */
 }
 
 .hero-list-item__infor {
@@ -252,5 +276,64 @@ a {
     border-radius: 99px;
     background-color: #F2F2F2;
 }
+
+.hero__heading {
+    font-size: 6.6rem;
+    font-weight: 800;
+    line-height: 1.15;
+    color: var(--primary-color);
+}
+
+.hero__desc {
+    max-width: 391px;
+    font-size: 1.6rem;
+    font-weight: 400;
+    margin-top: 24px;
+    line-height: 1.88;
+    color: var(--desc-color);
+}
+
+.hero__row {
+    display: flex;
+    align-items: center;
+    margin-top: 38px;
+}
+
+.hero__header-btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-width: 189px;
+    height: 60px;
+    border: 1px solid #FD5056;
+    box-shadow: 0px 13px 26px -8px #FF5B2E6B;
+    background-color: var(--btn-color);
+    font-size: 1.6rem;
+    font-weight: 600;
+    line-height: 1;
+    color: #fff;
+    transition: .3s;
+}
+
+.hero__header-btn:hover {
+    opacity: 0.8;
+}
+
+.hero__cta-link {
+    font-size: 1.6rem;
+    font-weight: 500;
+    margin-left: 24px;
+    line-height: 1;
+    text-decoration: underline;
+    color: var(--primary-color);
+    transition: .3s;
+}
+
+.hero__cta-link:hover {
+    cursor: pointer;
+    scale: 90%;
+}
+
+
 
 
