Làm phần About part 3

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -361,6 +361,7 @@ a {
     display: grid;
     align-items: center;
     grid-template-columns: 1fr 1fr;
+    row-gap: 146px;
 }
 
 .about__media {
@@ -387,6 +388,7 @@ a {
 .about__checklist {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
+    justify-content: space-between;
     gap: 36px;
     margin-top: 54px;
 }
@@ -489,5 +491,56 @@ a {
     z-index: -1;
 }
 
+/* About Media #3 */
+.about__img-wrap-bottom {
+    width: 458px;
+    margin-left: 0;
+    z-index: -1;
+    border: 2px solid #FFFFFF;
+    border-radius: 18px;
+    background: linear-gradient(180deg, #C6E2FA 0%, #94C2EA 100%),
+    linear-gradient(0deg, #FFFFFF, #FFFFFF);
+    box-shadow: 0px 17px 77px -8px #BEA58B2B;
+}
 
+.about__img-wrap-bottom::after {
+    content: none;
+}
 
+.about__img-bottom {
+    width: 100%;
+}
+
+.about__decor-img {
+    position: absolute;
+}
+
+.about__decor-img:first-child {
+    bottom: -54px;
+    right: -42px;
+}
+
+.about__decor-img:nth-child(2) {
+    top: 12px;
+    right: 63px;
+}
+
+.about__decor-img:nth-child(3) {
+    top: -16px;
+    right: 13px;
+}
+
+.about__decor-img:nth-child(4) {
+    top: 33px;
+    right: -21px;
+}
+
+.about__decor-img:nth-child(5) {
+    bottom: 206px;
+    right: -33px;
+}
+
+.about__decor-img:nth-child(6) {
+    bottom: 150px;
+    right: 19px;
+}
