Làm phần About part 4

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -6,8 +6,8 @@
     --primary-color: #000958;
     --desc-color: #656689;
     --btn-color: #FF5B2E;
-    --bg-color: #fefaf5;
-    --second-bg-color: #FFFAF5;
+    --bg-color: #FFFAF5;
+    --second-bg-color: #FFF6ED;
 }
 
 html,
@@ -22,7 +22,7 @@ html {
 body {
     font-size: 1.6rem;
     font-family: 'Poppins', sans-serif;
-    background-color: var(--second-bg-color);
+    background-color: var(--bg-color);
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -544,3 +544,99 @@ a {
     bottom: 150px;
     right: 19px;
 }
+
+/* About Content #4 */
+.about__heading-bottom {
+    width: 543px;
+    margin-top: 52px;
+}
+
+.about__desc-bottom {
+    margin-bottom: 52px;
+}
+
+.tab__list {
+    position: relative;
+    display: inline-flex;
+    align-items: center;
+    column-gap: 56px;
+}
+
+.tab__list::after,
+.tab__item--active::after,
+.tab__content-more::after {
+    position: absolute;
+    content: "";
+    left: 0;
+    right: 0;
+    bottom: 0;
+    height: 2px;
+    border-radius: 1px;
+    background-color: var(--btn-color);
+    opacity: 0.07;
+}
+
+.tab__item {
+    position: relative;
+    display: flex;
+    align-items: center;
+    column-gap: 12px;
+    padding-bottom: 10px;
+    cursor: pointer;
+}
+
+.tab__content-item {
+    display: none;
+}
+
+.tab__content-item--active {
+    display: block;
+}
+
+.tab__item--active::after {
+    width: 95px;
+    opacity: 1;
+}
+
+.tab__icon {
+    width: 20px;
+}
+
+.tab__title {
+    font-family: Sora;
+    font-size: 1.8rem;
+    font-weight: 600;
+    line-height: 1;
+    color: #48496A;
+}
+
+.tab__content-desc {
+    padding-top: 36px;
+    padding-bottom: 32px;
+    width: 391px;
+    font-size: 1.4rem;
+    font-weight: 400;
+    line-height: 1.71;
+    color: var(--desc-color);
+}
+
+.tab__content-more {
+    position: relative;
+    display: inline-block;
+    padding-bottom: 5px;
+    font-size: 1.6rem;
+    font-weight: 500;
+    line-height: 1;
+    color: #FF5D31;
+}
+
+.tab__content-more::after {
+    width: 86px;
+    height: 1.5px;
+    opacity: 1;
+}
+
+
+
+
+
