--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -651,7 +651,8 @@ a {
     text-align: center;
 }
 
-.service__desc {
+.service__desc,
+.staff__desc {
     margin-bottom: 15px;
     font-family: Sora;
     font-size: 1.6rem;
@@ -765,11 +766,89 @@ a {
 
 .service__cta {
     min-width: 214px;
-    border-color: var(--btn-color);
     transition: .3s;
 }
 
 .service__cta:hover {
+    color: #fff;
+    background-color: var(--btn-color);
+}
+
+/* =============================== Staff =============================== */
+.staff {
+    margin-top: 100px;
+    padding: 30px 0;
+}
+
+.staff__top {
+    text-align: center;
+}
+
+.staff__list {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    column-gap: 35px;
+    margin-top: 45px;
+}
+
+.staff-item {
+    text-align: center;
+}
+
+.staff-item__img-wrap {
+    position: relative;
+    padding: 0 16px;
+    border-radius: 130px;
+    overflow: hidden;
+}
+
+.staff-item__img-wrap::before {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    content: "";
+    width: 100%;
+    height: 266px;
+    border-radius: inherit;
+    background: linear-gradient(180deg, #90CCFF 0%, #59A8EB 95.96%);
+}
+
+.staff-item__img {
+    position: relative;
+    z-index: 1;
+    display: block;
+    width: 100%;
+    object-fit: cover;
+}
+
+.staff-item__title {
+    margin-top: 34px;
+    font-size: 1.4rem;
+    font-weight: 400;
+    line-height: 1;
+    color: var(--desc-color);
+}
+
+.staff-item__name {
+    margin-top: 14px;
+    font-size: 2.2rem;
+    font-weight: 600;
+    line-height: 1;
+    color: var(--primary-color);
+}
+
+.staff__cta-wrap {
+    display: flex;
+    justify-content: center;
+    margin-top: 48px;
+}
+
+.staff__cta {
+    min-width: 193px;
+    transition: .3s;
+}
+
+.staff__cta:hover {
     color: #fff;
     background-color: var(--btn-color);
 }
