Làm phần Staff part 2

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -793,13 +793,19 @@ a {
 
 .staff-item {
     text-align: center;
+    transition: .3s;
+}
+
+.staff-item:hover {
+    cursor: pointer;
+    translate: 0 -30px;
+    text-shadow: 1px 0 0 currentColor;
 }
 
 .staff-item__img-wrap {
     position: relative;
-    padding: 0 16px;
+    margin: 0 16px;
     border-radius: 130px;
-    overflow: hidden;
 }
 
 .staff-item__img-wrap::before {
@@ -813,12 +819,51 @@ a {
     background: linear-gradient(180deg, #90CCFF 0%, #59A8EB 95.96%);
 }
 
+.staff-item__img-wrap::after {
+    position: absolute;
+    left: 50%;
+    bottom: 0;
+    transform: translateX(-50%);
+}
+
+.staff-item:nth-child(1) .staff-item__img-wrap::after {
+    content: url(../img/staff-decor-01.svg);
+}
+
+.staff-item:nth-child(2) .staff-item__img-wrap::before {
+    background: linear-gradient(180deg, #FF997E 0%, #F3752E 100%);
+}
+
+.staff-item:nth-child(2) .staff-item__img-wrap::after {
+    content: url(../img/staff-decor-02.svg);
+}
+.staff-item:nth-child(3) .staff-item__img-wrap::before {
+    background: linear-gradient(180deg, #FABF3E 0%, #FFA14A 100%);
+}
+
+.staff-item:nth-child(3) .staff-item__img-wrap::after {
+    content: url(../img/staff-decor-03.svg);
+}
+
+.staff-item:nth-child(4) .staff-item__img-wrap::before {
+    background: linear-gradient(180deg, #5BD6E2 0%, #00A7CC 100%);
+}
+
+.staff-item:nth-child(4) .staff-item__img-wrap::after {
+    content: url(../img/staff-decor-04.svg);
+}
+
+.staff-item:nth-child(even) .staff-item__img-wrap::after {
+    bottom: initial;
+    top: 16px;
+}
+
 .staff-item__img {
     position: relative;
     z-index: 1;
     display: block;
     width: 100%;
-    object-fit: cover;
+    border-radius: inherit;
 }
 
 .staff-item__title {
