--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -814,20 +814,26 @@ a {
     left: 0;
     content: "";
     width: 100%;
-    height: 266px;
+    height: 94%;
     border-radius: inherit;
     background: linear-gradient(180deg, #90CCFF 0%, #59A8EB 95.96%);
 }
 
 .staff-item__img-wrap::after {
+    content: "";
     position: absolute;
     left: 50%;
     bottom: 0;
     transform: translateX(-50%);
+    width: calc(100% + 36px);
+    height: 100%;
+    background-repeat: no-repeat;
+    background-position: bottom;
+    background-size: 100%;
 }
 
 .staff-item:nth-child(1) .staff-item__img-wrap::after {
-    content: url(../img/staff-decor-01.svg);
+    background-image: url(../img/staff-decor-01.svg);
 }
 
 .staff-item:nth-child(2) .staff-item__img-wrap::before {
@@ -835,14 +841,14 @@ a {
 }
 
 .staff-item:nth-child(2) .staff-item__img-wrap::after {
-    content: url(../img/staff-decor-02.svg);
+    background-image: url(../img/staff-decor-02.svg);
 }
 .staff-item:nth-child(3) .staff-item__img-wrap::before {
     background: linear-gradient(180deg, #FABF3E 0%, #FFA14A 100%);
 }
 
 .staff-item:nth-child(3) .staff-item__img-wrap::after {
-    content: url(../img/staff-decor-03.svg);
+    background-image: url(../img/staff-decor-03.svg);
 }
 
 .staff-item:nth-child(4) .staff-item__img-wrap::before {
@@ -850,12 +856,11 @@ a {
 }
 
 .staff-item:nth-child(4) .staff-item__img-wrap::after {
-    content: url(../img/staff-decor-04.svg);
+    background-image: url(../img/staff-decor-04.svg);
 }
 
 .staff-item:nth-child(even) .staff-item__img-wrap::after {
-    bottom: initial;
-    top: 16px;
+    background-position: 0 16px;
 }
 
 .staff-item__img {
