Làm phần Review

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1009,6 +1009,10 @@ a {
     background-color: #fff;
 }
 
+.pricing-item--active {
+    box-shadow: 0px 20px 44px 0px #C36C160F;
+}
+
 .pricing-item__type {
     font-size: 1.2rem;
     font-weight: 400;
@@ -1062,3 +1066,142 @@ a {
 .pricing-item__item + .pricing-item__item {
     margin-top: 18px;
 }
+
+/* =============================== Review =============================== */
+.review {
+    padding: 104px 0 52px;
+}
+
+.review__inner {
+    display: flex;
+    align-items: center;
+    column-gap: 44px;
+}
+
+.review__control {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-shrink: 0;
+    width: 54px;
+    height: 54px;
+    border: 1.5px solid #FFD1C4;
+    border-radius: 50%;
+    color: var(--btn-color);
+    background-color: transparent;    
+    transition: .3s;
+}
+
+.review__control:nth-of-type(2) {
+    margin-left: auto;
+}
+
+.review__control:hover {
+    cursor: pointer;
+    border-color: var(--btn-color);
+    color: #fff;
+    background-color: var(--btn-color);
+    box-shadow: 0px 5px 27px 0px #FF5B2E4D;
+}
+
+.review__list {
+    display: flex;
+}
+
+.review-item {
+    display: flex;
+    align-items: center;
+    column-gap: 115px;
+    width: 100%;
+    flex-shrink: 0;
+}
+
+.review-item__media {
+    position: relative;
+    flex-shrink: 0;
+    margin-top: -52px;
+    width: 274px;
+    border-radius: 137px;
+}
+
+.review-item__media::after {
+    content: "";
+    position: absolute;
+    inset: auto 0 0 0;
+    height: 82%;
+    border-radius: inherit;
+    background-color: #FFDA54;
+}
+
+.review__content {
+    overflow: hidden;
+}
+
+.review-item__content {
+    margin-top: 28px;
+}
+
+.review-item__img {
+    position: relative;
+    z-index: 1;
+    display: block;
+    width: 100%;
+    border-radius: inherit;
+    object-fit: cover;
+}
+
+.review-item__quote {
+    margin-top: 24px;
+    width: 553px;
+    font-size: 1.8rem;
+    font-weight: 400;
+    line-height: 1.55;
+    color: #000;
+}
+
+.review-item__author {
+    display: flex;
+    align-items: center;
+    margin-top: 34px;
+    font-family: Sora, sans-serif;
+    font-size: 1.8rem;
+    font-weight: 600;
+    line-height: 1;
+    color: #282828;
+}
+
+.review-item__author::before {
+    content: "";
+    display: inline-block;
+    width: 20px;
+    height: 2px;
+    margin-right: 8px;
+    border-radius: 1px;
+    background-color: #000;
+}
+
+.review__dots {
+    margin-top: 56px;
+    display: flex;
+    justify-content: center;
+    column-gap: 8px;
+}
+
+.review__dot {
+    width: 8px;
+    height: 8px;
+    border: 1px solid #FF5B2E;
+    border-radius: 4px;
+    transition: .3s;
+}
+
+.review__dot:hover {
+    cursor: pointer;
+    background-color: var(--btn-color);
+}
+
+.review__dot--active {
+    width: 24px;
+    background-color: var(--btn-color);
+}
+
