--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1208,6 +1208,7 @@ a {
 /* =============================== Blog =============================== */
 .blog {
     margin-top: 78px;
+    padding-bottom: 78px;
 }
 
 .blog__top {
@@ -1300,4 +1301,103 @@ a {
     font-weight: 400;
     line-height: 1.71;
     color: var(--desc-color);
+}
+
+/* =============================== Footer =============================== */
+/* Footer left */
+.footer {
+    margin-top: 53px;
+    background-color: var(--second-bg-color);
+}
+
+.footer__inner {
+    display: flex;
+}
+
+.footer__left {
+    padding: 114px 0 148px;
+}
+
+.subscribe-form {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 268px;
+    height: 46px;
+    margin-top: 35px;
+    margin-bottom: 68px;
+    border: 1px solid #FF5B2E40;
+    border-radius: 23px;
+    background-color: #fff;
+}
+
+.subscribe-form__input {
+    width: 100%;
+    height: 100%;
+    font-size: 1.4rem;
+    border: none;
+    outline: none;
+    border-radius: inherit;
+    padding: 0 22px;
+}
+
+.subscribe-form__input::placeholder {
+    font-family: Poppins;
+    font-size: 1.2rem;
+    font-weight: 300;
+    line-height: 1.17;
+    color: var(--desc-color);
+    opacity: 0.8;
+}
+
+.subscribe-form__submit {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-shrink: 0;
+    width: 46px;
+    height: 46px;
+    outline: none;
+    margin-right: -1px;
+    border: none;
+    border-radius: 50%;
+    background-color: var(--btn-color);
+    box-shadow: 0px 15px 28px -7px #FF5B2E4D;
+}
+
+.subscribe-form__submit:hover {
+    cursor: pointer;
+    opacity: 0.9;
+}
+
+.footer__heading {
+    font-size: 1.8rem;
+    font-weight: 600;
+    line-height: 1.11;
+    color: var(--primary-color);
+}
+
+.social-list {
+    display: flex;
+    margin-top: 16px;
+    column-gap: 16px;
+}
+
+.social-item {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 32px;
+    height: 32px;
+    border: 1px solid #FFFFFF;
+    border-radius: 50%;
+    background-color: #fff;
+    box-shadow: 0px 16px 28px -10px #D3843554;
+    transition: .3s;
+}
+
+
+.social-item:hover {
+    box-shadow: 0px 36px 100px 0px #6F786F33;
+    translate: 0 -10px;
 }
