Làm phần Footer right

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1307,14 +1307,16 @@ a {
 /* Footer left */
 .footer {
     margin-top: 53px;
-    background-color: var(--second-bg-color);
+    background: linear-gradient(to right, var(--second-bg-color) 43%, transparent 42%);
 }
 
 .footer__inner {
     display: flex;
+    justify-content: space-between;
 }
 
 .footer__left {
+    width: 42%;
     padding: 114px 0 148px;
 }
 
@@ -1396,8 +1398,45 @@ a {
     transition: .3s;
 }
 
-
 .social-item:hover {
     box-shadow: 0px 36px 100px 0px #6F786F33;
     translate: 0 -10px;
+}
+
+/* Footer right */
+.footer__right {
+    flex: 1;
+    padding: 52px 0 48px 0;
+}
+
+.footer__row {
+    margin-left: 129px;
+    display: grid;
+    grid-template-columns: auto auto;
+    gap: 58px 137px;
+}
+
+.footer__list {
+    margin-top: 14px;
+}
+
+.footer__link {
+    font-size: 1.4rem;
+    font-weight: 400;
+    line-height: 2;
+    color: var(--desc-color);
+    transition: .3s;
+}
+
+.footer__link:hover {
+    text-decoration: underline;
+}
+
+.footer__copyright {
+    margin: 52px 0 0 22px;
+    font-size: 1.2rem;
+    font-weight: 400;
+    line-height: 1.16;
+    color: var(--desc-color);
+    opacity: 0.5;
 }
