--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -112,6 +112,14 @@ a {
     padding: 26px 0;
 }
 
+.fixed-header {
+    position: sticky;
+    top: 0;
+    z-index: 1;
+    padding: 28px 0 12px;
+    background-color: var(--bg-color);
+}
+
 .header__inner {
     display: flex;
     align-items: center;
